# drug-shortage-risk

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: scoring.yml  sources.yml
data/sample/: sample_claims.csv  sample_licenses.csv  sample_nhi_items.csv  sample_recalls.csv
docs/: data_profile.md
src/drug_shortage/: __init__.py  cli.py
src/drug_shortage/dashboard/: __init__.py  app.py
src/drug_shortage/profiling/: __init__.py  create_sample_data.py  profile_data.py
src/drug_shortage/transform/: __init__.py  build_demand_features.py  build_master.py  build_recall_features.py  build_supply_features.py  score_risk.py
tests/: test_build_demand_features.py  test_build_master.py  test_build_recall_features.py  test_build_supply_features.py  test_cli.py  test_create_sample_data.py  test_dashboard_app.py  test_profile_data.py  test_score_risk.py
