[project]
name = "drug-shortage-risk"
version = "0.1.0"
description = "Rule-based public-data pipeline for drug shortage risk scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
drug-shortage = "drug_shortage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drug_shortage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
